add public private functionality and status and create route for course and associated notes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,3 +29,15 @@
 
 en:
   hello: "Hello world"
+
+en:
+  activerecord:
+    models:
+      article: "User"
+    attributes:
+      article:
+        title: "Title"
+    errors:
+      messages:
+        blank: "cannot be blank"
+
